Fix Font Issues on Mobile
- Since the dynamic font sizes were set on the previous font, there was an issue with the size breakpoints so I had to adjust the font by chaining ternary operators in the JSX

--- a/src/index.css
+++ b/src/index.css
@@ -298,7 +298,7 @@ h2 {
   -ms-flex-align: center;
   align-items: center;
   margin: 0;
-  padding: 0 2rem;
+  padding: 0;
   width: 100%;
   height: 100%;
   font-size: 4rem;
@@ -1103,7 +1103,7 @@ input::placeholder {
   .choice-prefix {
     font-size: 2.3rem;
     color: rgba(0, 0, 0, 0);
-    margin: 0 0.5rem 0 2rem;
+    margin: 0 1rem;
     padding: 0;
     -webkit-text-stroke: 1.5px rgba(0, 0, 0, 0.8);
     text-stroke: 1.5px rgba(0, 0, 0, 0.8);
